--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -87,8 +87,13 @@
 
    <!-- DL Nav tabs -->      
    <ul class="nav nav-tabs" role="tablist">
+     <li role="presentation" class="active">
+         <a href="#overall_dlfc_tab" aria-controls="home1" role="tab" data-toggle="tab" id='dlfc_boot_overall'>
+           Overall
+         </a>
+       </li>
      {%for group in report.genegroup_set.all%}
-       <li role="presentation" {%if forloop.counter == 1 %}class="active"{%endif%}>
+       <li role="presentation" >
          <a href="#{{group.get_slug}}_dlfc_tab" aria-controls="home1" role="tab" data-toggle="tab" id='dlfc_boot_{{group.get_slug}}'>
            {{group.name}}
          </a>
@@ -97,17 +102,63 @@
    </ul>
          
    <div class="tab-content">
+     <div role="tabpanel" class="tab-pane fade in active" id="overall_dlfc_tab">
+     
+      <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active">
+          <a href="#overall_dlfc_tab10"  role="tab" data-toggle="tab" id='dlfc_boot_overall10'>
+          Drug 10</a>
+          </li>
+          <li role="presentation" >
+          <a href="#overall_dlfc_tab12"  role="tab" data-toggle="tab" id='dlfc_boot_overall12'>
+          Drug 12</a>
+          </li>
+          <li role="presentation" >
+          <a href="#overall_dlfc_tab15"  role="tab" data-toggle="tab" id='dlfc_boot_overall15'>
+          Drug 15</a>
+          </li>
+          <li role="presentation" >
+          <a href="#overall_dlfc_tab29"  role="tab" data-toggle="tab" id='dlfc_boot_overall29'>
+          Drug 29</a>
+          </li>
+      </ul>
+      
+      <div class="tab-content">
+        <div role="tabpanel" class="tab-pane fade in active" id="overall_dlfc_tab10">
+          <div id="dlfc_overall10" style="min-width: 800px; height: 500px; max-width: 800px; margin: 0 auto">
+            <span>Loading bar plot...</span>
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane fade " id="overall_dlfc_tab12">
+          <div id="dlfc_overall12" style="min-width: 800px; height: 500px; max-width: 800px; margin: 0 auto">
+            <span>Loading bar plot...</span>
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane fade " id="overall_dlfc_tab15">
+          <div id="dlfc_overall15" style="min-width: 800px; height: 500px; max-width: 800px; margin: 0 auto">
+            <span>Loading bar plot...</span>
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane fade " id="overall_dlfc_tab29">
+          <div id="dlfc_overall29" style="min-width: 800px; height: 500px; max-width: 800px; margin: 0 auto">
+            <span>Loading bar plot...</span>
+          </div>
+        </div>
+      
+      
+      </div> <!-- end of inner tab content -->
+           
+                  
+     
+     </div>
+   
     {%for group in report.genegroup_set.all%}
-     {%if forloop.counter == 1 %}
-     <div role="tabpanel" class="tab-pane fade in active" id="{{group.get_slug}}_dlfc_tab">
-     {%else%}
-     <div role="tabpanel" class="tab-pane fade " id="{{group.get_slug}}_dlfc_tab">
-     {%endif%}
+     
+     <div role="tabpanel" class="tab-pane fade " id="{{group.get_slug}}_dlfc_tab">     
              
        <div id="dlfc_{{group.get_slug}}" style="min-width: 800px; height: 500px; max-width: 800px; margin: 0 auto">
          <span>Loading bar plot...</span>
-       </div>
-     
+       </div>     
      
      </div> <!-- end of tabpanel div -->
     {%endfor%}
@@ -623,13 +674,36 @@ $(function() {
     
     {%endfor%}
 
-/////////////////// Deep Learning    
-    {%for group in report.tfgroup_set.all%}
-    
-        {%if forloop.counter = 1%}           
-          drawDLColumn({{report.id}}, 'dlfc_{{group.get_slug}}',
-        		  '{{group.get_slug}}');	      
-        {%else%}        
+/////////////////// Deep Learning
+//Overal tabs
+
+  drawDLColumn({{report.id}}, 'dlfc_overall10',
+      		                 'overall_10');
+  
+  $('#dlfc_boot_overall12').click(function(){
+            	
+        	if($("#dlfc_overall12 span").html() == 'Loading bar plot...'){
+        		drawDLColumn({{report.id}}, 'dlfc_overall12',
+      		                 'overall_12');
+			}     	
+         });
+  $('#dlfc_boot_overall15').click(function(){
+  	
+  	if($("#dlfc_overall15 span").html() == 'Loading bar plot...'){
+  		drawDLColumn({{report.id}}, 'dlfc_overall15',
+		                 'overall_15');
+		}     	
+   });
+  $('#dlfc_boot_overall29').click(function(){
+  	
+  	if($("#dlfc_overall29 span").html() == 'Loading bar plot...'){
+  		drawDLColumn({{report.id}}, 'dlfc_overall29',
+		                 'overall_29');
+		}     	
+   });
+
+//Group tabs
+    {%for group in report.tfgroup_set.all%}              
         
         $('#dlfc_boot_{{group.get_slug}}').click(function(){
             	
@@ -638,7 +712,7 @@ $(function() {
       		                 '{{group.get_slug}}');
 			}     	
          });        
-        {%endif%}  
+          
     {%endfor%}
 
 /////////////////// Correlation     
