--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -661,7 +661,7 @@ $(function() {
 	  
 	  {%if forloop.counter = 1%}
 	      drawVolcanoPlot('{{group.get_slug}}_volcano',  '{{group.doc_logfc}}');
-	      drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{report.get_gene_groups}}'); 
+	      drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{report.get_all_gene_groups_norm_as_list}}'); 
 	  
 	      
 	  {%else%}
@@ -671,7 +671,7 @@ $(function() {
 				drawVolcanoPlot('{{group.get_slug}}_volcano',  '{{group.doc_logfc}}');
 			}
 			if ( !$.fn.dataTable.isDataTable( '#tbl-{{group.get_slug}}' ) ) {
-				 drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{report.get_gene_groups}}'); 
+				 drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{report.get_all_gene_groups_norm_as_list}}'); 
 				}
 		   });
 	  
