--- a/oncoFinder2/templates/food/index.html
+++ b/oncoFinder2/templates/food/index.html
@@ -35,7 +35,7 @@
          <div>
          <span class='pull-left' style='font-size:11pt; margin:15px;'>
          <img src='/static/images/insilico.png' style="width:40px;"/>
-         Insilico Medicine - Organisation</span>
+         Insilico Medicine - Organization</span>
          <span class='pull-right' style='font-size:11pt; margin:15px;'>Access Level: Z-II, <br/>Confidential </span>
          </div><br style="clear:both;"/>
           <div class='text-center'>
@@ -45,7 +45,7 @@
           
           <div style="margin: 50px 0 0 50px; padding: 0 50px 0 0;">
             <h4 style='font-weight:bold; font-size:12pt;'>Organization: </h4>
-            <span style="font-size:11pt">Organisaytion</span>
+            <span style="font-size:11pt">Organization</span>
             <br/><br/>
             <!-- <h4 style='font-weight:bold; font-size:12pt;'>Data Quality Assessment: </h4>-->
             
@@ -186,6 +186,8 @@ $(function() {
 	 $('#food_groups_select').multiselect();
 	 
 	 $("#start_search").click(function(){
+		 
+		 $("#seraching").fadeIn();
 		 
 		 $("#output").hide();
 		 $("#best").empty();
