--- a/oncoFinder2/templates/food/index.html
+++ b/oncoFinder2/templates/food/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> FNDDS Search Engine | Insilico Medicine</title>
+    <title> Insilico Search Engine | Insilico Medicine</title>
     <link href="/static/bower_components/bootstrap-stylus/dist/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="//code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="/static/js/oncofinder2.js" type="text/javascript"></script>
@@ -35,7 +35,7 @@
          <div>
          <span class='pull-left' style='font-size:11pt; margin:15px;'>
          <img src='/static/images/insilico.png' style="width:40px;"/>
-         Insilico Medicine - Organization</span>
+         Insilico Medicine - Pathway Genomics</span>
          <span class='pull-right' style='font-size:11pt; margin:15px;'>Access Level: Z-II, <br/>Confidential </span>
          </div><br style="clear:both;"/>
           <div class='text-center'>
@@ -45,7 +45,7 @@
           
           <div style="margin: 50px 0 0 50px; padding: 0 50px 0 0;">
             <h4 style='font-weight:bold; font-size:12pt;'>Organization: </h4>
-            <span style="font-size:11pt">Organization</span>
+            <span style="font-size:11pt">Pathway Genomics</span>
             <br/><br/>
             <!-- <h4 style='font-weight:bold; font-size:12pt;'>Data Quality Assessment: </h4>-->
             
