food search engine 6

--- a/oncoFinder2/templates/food/index.html
+++ b/oncoFinder2/templates/food/index.html
@@ -39,7 +39,7 @@
          <span class='pull-right' style='font-size:11pt; margin:15px;'>Access Level: Z-II, <br/>Confidential </span>
          </div><br style="clear:both;"/>
           <div class='text-center'>
-            <h1>Insilico Search Engine <sup>BETA</sup></h1>
+            <h1>Insilico Food Search Engine <sup>BETA</sup></h1>
           </div>
           
           
