--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -727,7 +727,7 @@
      <div role="tabpanel" class="tab-pane fade " id="{{group.get_slug}}_tf_tab">
      {%endif%}
              
-       <h4>Table <span class='tbl_num'></span>Table Transcription Factor (FANTOM5) for {{group.name}} </h4>
+       <h4>Table <span class='tbl_num'></span>Table Transcription Factor (FANTOM5 database) for {{group.name}} </h4>
        <table id="tbl-tf-{{group.get_slug}}" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
