--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -273,11 +273,11 @@
    
    </div> <!--  end of tab-content div -->
 
-  <h3>Comparative assessment. Antineoplastic potential</h3>
+  <h3>Comparative assessment</h3>
    <div id="dl_ap_plot" style="min-width: 800px; height: 500px; max-width: 800px; margin: 0 auto">
          <span>Loading bar plot...</span>
        </div> 
-   <h3>Comparative assessment. Number of predicted side effects</h3>
+   <!--  <h3>Comparative assessment. Number of predicted side effects</h3>-->
    <div id="dl_nse_plot" style="min-width: 800px; height: 500px; max-width: 800px; margin: 0 auto">
          <span>Loading bar plot...</span>
        </div> 
