--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -282,7 +282,7 @@
          <span>Loading bar plot...</span>
        </div> 
 
-
+Here we compared 4 provided compounds with some of our leads by predicted efficacy as Antineoplastic agent and total number of predicted side effects.  
 </div> <!--  end of hiding div -->
 <!-- End of DeepLearning -->
           
