--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -108,7 +108,7 @@
 <div id='hide_dl' style='display:none;'> <!-- Div to hide and load on button click -->
 
 
-<h3>Pharmacological Classes</h3>
+<h3>Therapeutic use</h3>
 <hr/>
    <!-- DL Nav tabs -->      
    <ul class="nav nav-tabs" role="tablist">
