--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -45,6 +45,16 @@
             <br/><br/>
             <!-- <h4 style='font-weight:bold; font-size:12pt;'>Data Quality Assessment: </h4>-->
             
+            <span style='font-weight:bold; font-size:12pt;'>Type of data:</span> RNA-seq <br/>
+            <span style='font-weight:bold; font-size:12pt;'>Data format:</span> FASTQ<br/>
+            <span style='font-weight:bold; font-size:12pt;'>Cell lines:</span> A549, MCF7<br/>
+            <span style='font-weight:bold; font-size:12pt;'>Number of compounds:</span> 4<br/>
+            <span style='font-weight:bold; font-size:12pt;'>Concentration(s):</span> 100 and 1000 nM (compounds 10, 12 and 15), 80 and 360 nM (compound 29)<br/>
+            <span style='font-weight:bold; font-size:12pt;'>Perturbation time(s):</span> 5 hours<br/>
+            <span style='font-weight:bold; font-size:12pt;'>Number of replicates:</span> 2 for drug perturbation, 4 for DMSO reference
+            
+            
+            
             <ul class="list-unstyled" style='font-size: 11pt; margin: 50px 0 0 0;' >
             <li class="title">Table of contents: </li>
             <!--  
