--- a/oncoFinder2/templates/website/login.html
+++ b/oncoFinder2/templates/website/login.html
@@ -1,8 +1,24 @@
-{% extends "base_website.html" %}
+<!doctype html>
+<html lang="en-US">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>OncoFinder login</title>
+    
+    <link rel="stylesheet" href="/static/css/bootstrap.css" type='text/css' />
+    <link rel="stylesheet" href="/static/css/style.css" type='text/css' />    
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script src="/static/js/jquery-2.1.0.min.js"></script>
+</head>
 
-{% block title %}OncoFinder login{% endblock %}
-
-{% block content %}
+<body>    
 <div class="container">
 
   {% if form.errors %}
@@ -17,6 +33,7 @@
       <h3 class="panel-title">Sign in</h3>
     </div>
     <div class="panel-body">
+     
        <form action="{% url 'django.contrib.auth.views.login' %}" method="post" enctype="multipart/form-data" id="login_form">
           {% csrf_token %}       
 
@@ -27,7 +44,7 @@
           {{ form.password }}
           <a href="#">Forgot password?</a>
           
-           <input type="hidden" name="next" value="/" />
+           <input type="hidden" name="next" value="{{ next }}" />
 
  
     </div>
@@ -41,4 +58,6 @@ $(function() {
                $("#login_form > input").addClass("form-control");
 });
 </script>
-{% endblock %}
+
+</body>
+</html>
