--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -687,7 +687,7 @@ Here we compared 4 provided compounds with some of our leads by predicted effica
           <tr>
            <th>Entrez ID</th>
            <th>Gene Symbol</th>
-           <th>SPS_{{group.get_slug}}.tab</th>
+           <th>Score</th>
           </tr>
         </thead>  
       </table>
