--- a/oncoFinder2/templates/report/report_detail_jjms.html
+++ b/oncoFinder2/templates/report/report_detail_jjms.html
@@ -401,7 +401,7 @@ $(function() {
 			  
 			      
 			  if ( !$.fn.dataTable.isDataTable( '#tbl-{{group.get_slug}}' ) ) {
-					 drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{report.get_gene_groups}}'); 
+					 drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{group.get_slug}}'); 
 					}
 			  
 				  }
@@ -410,7 +410,7 @@ $(function() {
 				drawVolcanoPlot('{{group.get_slug}}_volcano',  '{{group.doc_logfc}}');
 			}
 			if ( !$.fn.dataTable.isDataTable( '#tbl-{{group.get_slug}}' ) ) {
-				 drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{report.get_gene_groups}}'); 
+				 drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{group.get_slug}}'); 
 				}
 		  }
 		   });
