--- a/oncoFinder2/templates/profiles/index.html
+++ b/oncoFinder2/templates/profiles/index.html
@@ -20,8 +20,12 @@
         <div class="panel-heading">Users</div>
         <div class="panel-body">
           <ul>
-          {% for user in all_users|dictsort:"username" %}
-          <li><a href="/user/{{user.username}}">{{user.username}}</a></li>
+          {% for username in usernames %}
+          {% if username != user_profile.username %}
+            <li><a href="/user/{{username}}">{{username}}</a></li>
+          {% else %}
+            <li>{{username}} (current)</li>
+          {% endif %}
           {% endfor %}
           </ul>
         </div>
