--- a/oncoFinder2/templates/profiles/index.html
+++ b/oncoFinder2/templates/profiles/index.html
@@ -10,12 +10,12 @@
   {% else %}
   <img src='/static/images/noPicture.jpg' width="230" /><br/>
   {% endif %}
-    <h2>{{user_profile.username}}</h2>
+    <h2>{{user_profile.username}}
     {% if user_profile == user %}
-      <button class="btn btn-default" onClick="location.href='/settings/profile'">
-        <span class="glyphicon glyphicon-pencil"></span> &nbsp;Edit profile
-      </button><br/><br/>
-    {%endif%}
+      <button class="btn btn-default btn-sm pull-right" onClick="location.href='/settings/profile'">
+        <span class="glyphicon glyphicon-pencil"></span>&nbsp;Edit
+      </button>
+    {%endif%}</h2>
     <div class="panel panel-default">
         <div class="panel-heading">Users</div>
         <div class="panel-body">
