--- a/oncoFinder2/templates/report/report_detail_jjms.html
+++ b/oncoFinder2/templates/report/report_detail_jjms.html
@@ -116,7 +116,7 @@
           <tr>
            <th>Gene</th>
            <th>log2FoldChange</th>
-           <th>adj. p-value</th>
+           <th>p-value</th>
           </tr>
         </thead>  
       </table>
