fixed typos - thank Ivan

--- a/oncoFinder2/templates/project/project_detail.html
+++ b/oncoFinder2/templates/project/project_detail.html
@@ -138,11 +138,11 @@
         <div class="alert alert-warning">
         
          <h4>Important!</h4>
-	      Accepted file formats are: <b>CSV, TXT, XLS, XLSX</b> with delimeters <b>\t , ;</b> <br/>
+	      Accepted file formats are: <b>CSV, TXT, XLS, XLSX</b> with delimiters <b>\t , ;</b> <br/>
 	      Files should have names in English letters only! <br/>
 	      Column with gene names should be called <strong>SYMBOL</strong> <br/>
-	      Columns with Samples should contain <strong>"Tumour"</strong> in it's name <br/>
-	      Columns with Norms should contain <strong>"Norm"</strong> in it's name <br/>
+	      Columns with Samples should contain <strong>"Tumour"</strong> in its name <br/>
+	      Columns with Norms should contain <strong>"Norm"</strong> in its name <br/>
 	      If an error occurs, please contact OncoFinder administration.
        
         </div>
